[project]
name = "lemonslice"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "certifi",
    "google-genai>=1.61.0",
    "landingai-ade>=1.5.0",
    "livekit-agents[cartesia,deepgram,google,mcp,openai]~=1.3",
    "livekit-api>=1.1.0",
    "livekit-plugins-lemonslice>=1.3.12",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-silero>=1.3.12",
    "livekit-plugins-turn-detector>=1.3.12",
    "logfire>=4.21.0",
    "openai>=2.17.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "parallel-web>=0.4.1",
    "psycopg>=3.3.2",
    "pydantic[email,timezone]>=2.12.5",
    "pymongo>=4.16.0",
    "python-dotenv",
    "pyyaml",
    "resend>=2.21.0",
    "rich>=14.3.2",
    "sqlmodel>=0.0.32",
    "voyageai>=0.3.7",
]
